# ansiblesec

./: .gitignore  .gitlab-ci.yml  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.alpine  Jenkinsfile  LICENSE  Makefile  README.md  SECURITY.md  action.yml  quick-test.sh  setup.sh
.github/workflows/: ci.yml  release.yml
examples/: .ansiblesec.yml  bad_playbook.yml  custom_rules.yml  good_playbook.yml  requirements.yml
rules/: policies.yml  secrets.yml
scripts/: build-all.sh  install-hooks.sh  pre-commit.sh  release.sh
src/: cache.rs  cli.rs  config.rs  errors.rs  lib.rs  linter.rs  main.rs  policy.rs  policy_old.rs  reporting.rs  rules.rs  sbom.rs  scanner.rs  secrets.rs
tests/: integration_test.rs
