[package]
name = "ansiblesec"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Production-ready CLI tool for scanning and enforcing security policies in Ansible playbooks"
license = "MIT"
repository = "https://github.com/yourusername/ansiblesec"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# YAML parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Regex for secrets detection
regex = "1.10"
fancy-regex = "0.13"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async/threading
rayon = "1.10"
tokio = { version = "1.40", features = ["full"] }

# SBOM generation
cyclonedx-bom = "0.6"

# HTTP client for CVE lookups
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Terminal output
colored = "2.1"
indicatif = "0.17"

# Configuration
config = "0.14"

# Time utilities
chrono = "0.4"

# File walking
walkdir = "2.5"

# Hash for caching
blake3 = "1.5"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# Lazy static
lazy_static = "1.4"

# Directories
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
mockito = "1.4"

[features]
default = []

[[bin]]
name = "ansiblesec"
path = "src/main.rs"
